fix: string de acesso aos dicionarios de dados atualizada 'val' ->'valid'

--- a/Classificação_Resultados_preliminares.ipynb
+++ b/Classificação_Resultados_preliminares.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1nLHkfVHcZtg2m0cH_GrrcYYOdBJjwH19",
-      "authorship_tag": "ABX9TyPxjfVrUpq9VQw71geGQa7O",
+      "authorship_tag": "ABX9TyOCoBrFNmxVYTc8HMravJ9f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -379,13 +379,13 @@
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
         "batch_size = 32\n",
-        "epochs = 20\n",
+        "epochs = 2\n",
         "criterion = nn.CrossEntropyLoss()"
       ],
       "metadata": {
         "id": "sg6G9VKl2X3A"
       },
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -402,7 +402,7 @@
       "metadata": {
         "id": "x6ILw4Tq2YIY"
       },
-      "execution_count": 9,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -428,7 +428,7 @@
         "            print('-' * 10)\n",
         "\n",
         "            # Dependendo se o modelo está sendo treinado ou testado, a função trata ele\n",
-        "            for phase in ['train', 'val']:\n",
+        "            for phase in ['train', 'valid']:\n",
         "                if phase == 'train':\n",
         "                    model.train()  # Set model to training mode\n",
         "                else:\n",
@@ -489,7 +489,7 @@
       "metadata": {
         "id": "ep8sRYme2Yp5"
       },
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -516,23 +516,10 @@
         "exp_lr_scheduler = lr_scheduler.StepLR(optimizer_ft, step_size=7, gamma=0.1)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7z_IwUz2LZG6",
-        "outputId": "5d8035eb-058d-42e9-f1f2-d363d8a60bbd"
+        "id": "7z_IwUz2LZG6"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Downloading: \"https://download.pytorch.org/models/resnet18-f37072fd.pth\" to /root/.cache/torch/hub/checkpoints/resnet18-f37072fd.pth\n",
-            "100%|██████████| 44.7M/44.7M [00:00<00:00, 144MB/s]\n"
-          ]
-        }
-      ]
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -543,19 +530,33 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 398
         },
         "id": "o5OST6LNR6aY",
-        "outputId": "05bf80bd-d7b5-406c-d704-328ec88521bf"
+        "outputId": "caf28583-c8c3-46c4-d0fd-9d57bc7c9a1f"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 0/19\n",
-            "----------\n"
+            "Epoch 0/1\n",
+            "----------\n",
+            "train Loss: 0.3196 Acc: 0.9356\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-e496ca0e5474>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Treino:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m model_ft = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler,\n\u001b[0m\u001b[1;32m      3\u001b[0m                        num_epochs=epochs)\n",
+            "\u001b[0;32m<ipython-input-15-94cf7552a243>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, criterion, optimizer, scheduler, num_epochs)\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m                 \u001b[0;31m# Iterate over data.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m                 \u001b[0;32mfor\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdataloaders\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mphase\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m                     \u001b[0;31m# Envia os dados para o dispositivos de processamento (GPU do Colab)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m                     \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'val'"
           ]
         }
       ]
